<resources>
    <string name="app_name" translatable="false">PixelPal</string>
    <string name="dlcs_ultimate_edition_goty">DLCS, Ultimate editions, GOTY and etc.</string>
    <string name="profile">Profile</string>
    <string name="creators">Creators</string>
    <string name="games">Games</string>
    <string name="platforms">Platforms</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="all">All</string>
    <string name="release_date">Release date:</string>
    <string name="looks_like_you_dont_have_any_favorite_games_yet">Looks like you don\'t have any favorite games yet!</string>
    <string name="released">Released:</string>
    <string name="genre">Genre:</string>
    <string name="rating">Rating:</string>
    <string name="no_results_found_for_query">No results found for query:</string>
    <string name="roles">Roles:</string>
    <string name="famous_projects">Projects:</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="change_name">Change name</string>
    <string name="save">Save changes</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="search">Search</string>
    <string name="screenshot">Screenshots</string>
    <string name="domain" translatable="false">Domain</string>
    <string name="start_year">Start year</string>
    <string name="end_year">End year</string>
    <string name="other_games_in_this_series">Other games in this series:</string>
    <string name="description">Description:</string>
    <string name="where_to_buy">Stores</string>
    <string name="same_series">Same series</string>
    <string name="creation_date">Creation date:</string>
    <string name="playtime">Playtime:</string>
    <string name="new_releases">New releases</string>
    <string name="all_time_top">All time top</string>
    <string name="release_this_month">Release this month</string>
    <string name="what_other_games_are_coming_out">What other games are coming out?</string>
    <string name="there_is_no_games_releases_this_month">There is no game releases in this month!</string>
    <string name="there_is_no_new_games_released_this_month">There is no new games released in this month!</string>
    <string name="unknown">No data</string>
    <string name="publishers">Publishers</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="edit_profile">Edit profile</string>
    <string name="favorites">Favorites</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="next">Next</string>
    <string name="create_account">Create account</string>
    <string name="welcome_to_pixel_pal">Welcome to PixelPal</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="account_creation">Account creation</string>
    <string name="name">Name:</string>
    <string name="name_hint">Name</string>
    <string name="empty_fields_or_incorrect_data">Error: empty fields or incorrect data</string>
</resources>