<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/action_creators"
        android:enabled="true"
        android:icon="@drawable/ic_creators"
        android:title="@string/creators" />

    <item
        android:id="@+id/action_games"
        android:enabled="true"
        android:icon="@drawable/ic_games"
        android:title="@string/games" />

    <item
        android:id="@+id/action_platforms"
        android:enabled="true"
        android:icon="@drawable/ic_platforms"
        android:title="@string/platforms" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>