<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:background="@color/dark_red"
    android:padding="8dp">

    <myapplication.android.pixelpal.ui.custom_view.IconShimmerView
        android:id="@+id/icon_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawable="@drawable/ic_delete"
        app:iconColor="@color/light_red"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmerColor="@color/light_red" />

    <myapplication.android.pixelpal.ui.custom_view.TextShimmerView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tektur_bold"
        android:text="@string/are_you_sure"
        android:textColor="@color/light_red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_logout"
        app:textShimmerColor="@color/light_red" />

    <myapplication.android.pixelpal.ui.custom_view.TextShimmerView
        android:id="@+id/text_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/tektur_regular"
        android:text="@string/are_you_sure_you_want_to_delete_your_account"
        android:textAlignment="center"
        android:textColor="@color/light_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:textShimmerColor="@color/light_red" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        app:boxBackgroundColor="@color/text_input_red_background_color"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/text_input_red_background_color"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_main"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tektur_medium"
            android:textColor="@color/main_blue"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            android:hint="@string/password_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:fontFamily="@font/tektur_bold"
        android:text="@string/delete"
        android:textColor="@color/main_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:fontFamily="@font/tektur_medium"
        android:text="@string/cancel"
        android:textColor="@color/main_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_delete"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintTop_toTopOf="@+id/button_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>