<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:background="@color/dark_blue"
    android:padding="8dp">

    <myapplication.android.pixelpal.ui.custom_view.IconShimmerView
        android:id="@+id/icon_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawable="@drawable/ic_edit"
        app:iconColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmerColor="@color/main_blue" />

    <myapplication.android.pixelpal.ui.custom_view.TextShimmerView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tektur_bold"
        android:text="@string/change_name"
        android:textColor="@color/main_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_logout"
        app:textShimmerColor="@color/main_blue" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:boxBackgroundColor="@color/text_input_background_color"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/text_input_background_color"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tektur_medium"
            android:hint="@string/name_hint"
            android:textColor="@color/main_blue"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/transparent"
        android:fontFamily="@font/tektur_bold"
        android:text="@string/save"
        android:textColor="@color/main_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/button_logout"
        app:layout_constraintEnd_toEndOf="@id/button_logout"
        app:layout_constraintStart_toStartOf="@id/button_logout"
        app:layout_constraintTop_toTopOf="@+id/button_logout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:fontFamily="@font/tektur_medium"
        android:text="@string/cancel"
        android:textColor="@color/main_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_logout"
        app:layout_constraintEnd_toStartOf="@+id/button_logout"
        app:layout_constraintTop_toTopOf="@+id/button_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>