<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/red_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <myapplication.android.pixelpal.ui.custom_view.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/tektur_bold"
            android:textColor="@color/main_blue"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Название" />

        <TextView
            android:id="@+id/release_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tektur_medium"
            android:text="@string/release_date"
            android:textColor="@color/light_red"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tektur_medium"
            android:textColor="@color/light_red"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/release_title"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="28.12.2007" />

        <TextView
            android:id="@+id/genres_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tektur_medium"
            android:text="@string/genre"
            android:textColor="@color/light_red"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/release_date" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tektur_medium"
            android:textColor="@color/light_red"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/genres_title"
            app:layout_constraintTop_toBottomOf="@id/release_date"
            tools:text="28.12.2007" />


        <TextView
            android:id="@+id/playtime_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tektur_medium"
            android:text="@string/playtime"
            android:textColor="@color/light_red"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <TextView
            android:id="@+id/playtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tektur_medium"
            android:textColor="@color/light_red"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/playtime_title"
            app:layout_constraintTop_toBottomOf="@id/genres"
            tools:text="100ч." />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/frame"
        layout="@layout/item_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>